tests/negative/InfixError.mjuvix
module InfixError;

  infix 5 + ;
  axiom + : Type → Type → Type;

  axiom T : Type + Type + ;
end;